force-app/main/default/objects/Stock_Landed_Amount__c/Stock_Landed_Amount__c.object-meta.xml
<CustomObject>
    <label>Stock Landed Amount</label>
    <nameField>
        <displayFormat>SLA-{000000}</displayFormat>
        <label>Stock Landed Amount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Landed Amount</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>