force-app/main/default/objects/Stock_Landed_Amount__c/fields/Landed_Amount_Historical__c.field-meta.xml
<CustomField>
    <fullName>Landed_Amount_Historical__c</fullName>
    <label>Landed Amount Historical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>