force-app/main/default/objects/Stock_Landed_Amount__c/fields/Landed_Price__c.field-meta.xml
<CustomField>
    <fullName>Landed_Price__c</fullName>
    <formula>if(ISblank(MRN_Line_Item__c), Landed_Amount_Historical__c ,MRN_Line_Item__r.Landed_Cost_Unit_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landed Price/ Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>