force-app/main/default/objects/Stock_Landed_Amount__c/fields/MRN_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>MRN_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRN Line Item</label>
    <referenceTo>MRN_Line_Item__c</referenceTo>
    <relationshipLabel>Stock Landed Amount</relationshipLabel>
    <relationshipName>Stock_Landed_Amount</relationshipName>
    <type>Lookup</type>
</CustomField>