force-app/main/default/objects/Stock_Landed_Amount__c/fields/Product_Part__c.field-meta.xml
<CustomField>
    <fullName>Product_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product/Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Stock Landed Amount</relationshipLabel>
    <relationshipName>Stock_Landed_Amount</relationshipName>
    <type>Lookup</type>
</CustomField>