force-app/main/default/objects/Stock_Landed_Amount__c/fields/Quantity_In__c.field-meta.xml
<CustomField>
    <fullName>Quantity_In__c</fullName>
    <formula>MRN_Line_Item__r.Received_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>