force-app/main/default/objects/Stock_Landed_Amount__c/fields/Total_Landed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Landed_Amount__c</fullName>
    <formula>MRN_Line_Item__r.Total_Landed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Landed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>