force-app/main/default/objects/Stock_Landed_Amount__c/fields/Ware_House__c.field-meta.xml
<CustomField>
    <fullName>Ware_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ware House</label>
    <referenceTo>Ware_House__c</referenceTo>
    <relationshipLabel>Stock Landed Amount</relationshipLabel>
    <relationshipName>Stock_Landed_Amount</relationshipName>
    <type>Lookup</type>
</CustomField>